Міграцыя на Javalin 7